--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
